新增：下载图片时去除元数据信息 新增：对应去除元数据信息翻译提示信息 优化：暗色模式下的文字显示信息 优化：翻译文档说明

--- a/locales/app/en.json
+++ b/locales/app/en.json
@@ -346,6 +346,9 @@
   "tmt.build.at": "Website Build at",
   "tmt.description": "Description",
   "tmt.douyin": "tiktok",
+  "tmt.download.error": "Failed to download image, please try again later",
+  "tmt.download.success": "Image downloaded successfully",
+  "tmt.downloading": "Downloading image...",
   "tmt.language.select": "Select language",
   "tmt.reset": "Reset",
   "tmt.update.at": "Gallery Updated at",
