--- a/locales/app/jp.json
+++ b/locales/app/jp.json
@@ -342,6 +342,9 @@
   "tmt.build.at": "ウェブサイトビルド日",
   "tmt.description": "説明",
   "tmt.douyin": "ティックトック",
+  "tmt.download.error": "画像のダウンロードに失敗しました。後でもう一度お試しください。",
+  "tmt.download.success": "画像のダウンロードが成功しました。",
+  "tmt.downloading": "画像をダウンロード中...",
   "tmt.language.select": "言語の選択",
   "tmt.reset": "リセット",
   "tmt.update.at": "写真更新日",
