--- a/locales/app/ko.json
+++ b/locales/app/ko.json
@@ -342,6 +342,9 @@
   "tmt.build.at": "웹사이트 빌드 날짜",
   "tmt.description": "설명",
   "tmt.douyin": "tiktok",
+  "tmt.download.error": "이미지 다운로드에 실패했습니다. 나중에 다시 시도해 주세요.",
+  "tmt.download.success": "이미지를 성공적으로 다운로드했습니다.",
+  "tmt.downloading": "이미지를 다운로드 중...",
   "tmt.language.select": "언어 선택",
   "tmt.reset": "재설정",
   "tmt.update.at": "업데이트 날짜",
