--- a/locales/app/zh-CN.json
+++ b/locales/app/zh-CN.json
@@ -346,6 +346,9 @@
   "tmt.build.at": "网站构建于",
   "tmt.description": "描述",
   "tmt.douyin": "抖音",
+  "tmt.download.error": "下载图像失败，请稍后重试",
+  "tmt.download.success": "图像下载成功",
+  "tmt.downloading": "正在下载图像...",
   "tmt.language.select": "选择语言",
   "tmt.reset": "重置筛选",
   "tmt.update.at": "图库更新于",
