--- a/locales/app/zh-HK.json
+++ b/locales/app/zh-HK.json
@@ -342,6 +342,9 @@
   "tmt.build.at": "網站構建日期",
   "tmt.description": "描述",
   "tmt.douyin": "抖音",
+  "tmt.download.error": "下載失敗，請稍後重試",
+  "tmt.download.success": "下載成功",
+  "tmt.downloading": "正在下載圖像...",
   "tmt.language.select": "選擇語言",
   "tmt.reset": "重置",
   "tmt.update.at": "照片更新日期",
