新增：复用Live Photo播放逻辑支持播放mp4视频 新增：视频播放时播放声音 修复：Live Photo 标识播放时badge颜色异常问题

--- a/locales/app/en.json
+++ b/locales/app/en.json
@@ -352,6 +352,7 @@
   "tmt.language.select": "Select language",
   "tmt.reset": "Reset",
   "tmt.update.at": "Gallery Updated at",
+  "tmt.video.badge": "Video",
   "tmt.xiaohongshu": "rednote",
   "tmt.year": "-",
   "tmt.zoom.hint": "Zoom {{zoom}}x",
