--- a/locales/app/zh-CN.json
+++ b/locales/app/zh-CN.json
@@ -352,6 +352,7 @@
   "tmt.language.select": "选择语言",
   "tmt.reset": "重置筛选",
   "tmt.update.at": "图库更新于",
+  "tmt.video.badge": "视频",
   "tmt.xiaohongshu": "小红书",
   "tmt.year": "年",
   "tmt.zoom.hint": "缩放{{zoom}}倍",
