--- a/locales/app/jp.json
+++ b/locales/app/jp.json
@@ -348,6 +348,7 @@
   "tmt.language.select": "言語の選択",
   "tmt.reset": "リセット",
   "tmt.update.at": "写真更新日",
+  "tmt.video.badge": "ビデオ",
   "tmt.xiaohongshu": "レッドノート",
   "tmt.year": "年",
   "tmt.zoom.hint": "{{zoom}}倍ズーム",
