--- a/locales/app/zh-TW.json
+++ b/locales/app/zh-TW.json
@@ -347,6 +347,7 @@
   "tmt.language.select": "選擇語言",
   "tmt.reset": "重置",
   "tmt.update.at": "照片更新日期",
+  "tmt.video.badge": "視頻",
   "tmt.xiaohongshu": "小紅書",
   "tmt.year": "年",
   "tmt.zoom.hint": "縮放{{zoom}}倍",
