--- a/locales/app/ko.json
+++ b/locales/app/ko.json
@@ -348,6 +348,7 @@
   "tmt.language.select": "언어 선택",
   "tmt.reset": "재설정",
   "tmt.update.at": "업데이트 날짜",
+  "tmt.video.badge": "비디오",
   "tmt.xiaohongshu": "레드노트",
   "tmt.year": "년",
   "tmt.zoom.hint": "{{zoom}}배 확대 / 축소",
